--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
   "name": "travel-website-server-site",
@@ -8,7 +9,6 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-  
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
